cmake_minimum_required(VERSION 2.8.11 FATAL_ERROR)
project(helloworld)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(RESOURCE_DIR resources/testqt.qrc)
find_package(Qt5 REQUIRED Widgets)
qt5_add_resources(RCC testqt.qrc)
qt5_wrap_cpp( MOC include/login.h  include/mainwindow.h include/mouse.h include/test.h include/testQStackedWidget.h include/testQTreeWidget.h include/userinfo.h)
include_directories(include)
add_executable(helloworld  source/main.cpp source/login.cpp  source/mainwindow.cpp source/mouse.cpp source/test.cpp source/testQStackedWidget.cpp source/testQTreeWidget.cpp source/userinfo.cpp include/login.h  include/mainwindow.h include/mouse.h include/test.h include/testQStackedWidget.h include/testQTreeWidget.h include/userinfo.h)
target_link_libraries(helloworld Qt5::Widgets)